<resources>
    <string name="app_name">CodeMail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vaibhav singh</string>
    <string name="nav_header_subtitle">singh.vaibhav@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_sentmail">Sentmail</string>
    <string name="menu_outbox">outbox</string>
    <string name="menu_trash">trash</string>



    <string name="home_second">Home Second</string>
</resources>
