<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_inbox_black_24dp"
            android:title="@string/menu_inbox" />
        <item
            android:id="@+id/nav_outbox"
            android:icon="@drawable/ic_mail_outline_black_24dp"
            android:title="@string/menu_outbox" />
        <item
            android:id="@+id/nav_sentmail"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/menu_sentmail" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/menu_trash" />
    </group>
</menu>
