<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vaibhav.codemail.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_inbox"
        android:name="com.vaibhav.codemail.ui.inbox.inbox"
        android:label="@string/menu_inbox"
        tools:layout="@layout/inbox_fragment">
    </fragment>

    <fragment
        android:id="@+id/nav_outbox"
        android:name="com.vaibhav.codemail.ui.mailoutbox.outbox"
        android:label="@string/menu_outbox"
        tools:layout="@layout/outbox_fragment" />

    <fragment
        android:id="@+id/nav_sentmail"
        android:name="com.vaibhav.codemail.ui.sentmail.Sentmail"
        android:label="@string/menu_sentmail"
        tools:layout="@layout/sentmail_fragment" />

    <fragment
        android:id="@+id/nav_trash"
        android:name="com.vaibhav.codemail.ui.trash.trash"
        android:label="@string/menu_trash"
        tools:layout="@layout/trash_fragment" />

</navigation>